--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Welcome to the MOHOAzure homepage!
+description: Feel free to walk around. If you're interested in my blogging, please bookmark this to keep an eye on updates.
