--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 theme: jekyll-theme-slate
 title: Welcome to the MOHOAzure homepage!
 description: Feel free to walk around. If you're interested in my blogging, please bookmark this to keep an eye on updates.
+plugins:
+  - jekyll-relative-links
+relative_links:
+  enabled: true
+  collections: true
